--- a/web/index.html
+++ b/web/index.html
@@ -3,19 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Google Phone Gallery</title>
+	
+	<!-- <script src="lib/ng-map/ng-map.js"></script>`-->
+	<script src="lib/jquery-3.2.1/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="style/bootstrap-3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style/bootstrap-3.3.7/css/bootstrap-theme.min.css">
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBKWojtxkjHuh44CNE8mw9S-nX3qWeLHGM"></script>
     <!-- <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" /> -->
   </head>
   <body ng-app="mainModule">
     <div class="view-container">
       <div ng-view class="view-frame"></div>
     </div>
+	
+	<script src="lib/lodash/lodash.js"></script>
+	<script src="lib/angular-1.6.4/angular.min.js"></script>
+	
 
-    <script src="lib/angular-1.6.4/angular.min.js"></script>
-    <script src="lib/angular-1.6.4/angular-route.min.js"></script>
-
+	<script src="lib/angular-1.6.4/angular-route.min.js"></script>
+	<script src="lib/angular-google-maps-2.4.1/angular-google-maps.min.js"></script>
+	<script src="lib/angular-simple-logger/angular-simple-logger.js"></script>
+	
+	<script src="lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 
     <script src="modules/regions/regions.controller.js"></script>
     <script src="modules/resources/resources.controller.js"></script>
+	
+	
+	
+	<!-- <script src="lib/google-map/gmap.js?key=AIzaSyBKWojtxkjHuh44CNE8mw9S-nX3qWeLHGM"></script> -->
+   
+	
   </body>
 </html>
