--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,9 @@
     <script src="lib/angular-1.6.4/angular-route.min.js"></script>
 
     <script src="app.js"></script>
-
-    <script src="modules/regions/regions.controller.js"></script>
-    <script src="modules/resources/resources.controller.js"></script>
+    <script src="modules/main/master.js"></script>
+    
+    <script src="modules/regions/regionCtrl.js"></script>
+    <script src="modules/resources/resourceCtrl.js"></script>
   </body>
 </html>
