--- a/web/index.html
+++ b/web/index.html
@@ -25,9 +25,12 @@
 	<script src="lib/bootstrap-3.3.7/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
     <script src="modules/main/master.js"></script>
+    <script src="modules/main/RESTSrvc.js"></script>
     
     <script src="modules/regions/regionCtrl.js"></script>
     <script src="modules/resources/resourceCtrl.js"></script>
+     <script src="modules/regions/regionSrvc.js"></script>
+    <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
 	
 	
 	
