Added tableCtrl; Fixed regionCtrl

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,7 @@
     <script src="modules/main/RESTSrvc.js"></script>
     
     <script src="modules/regions/regionCtrl.js"></script>
+	<script src="modules/table/tableCtrl.js"></script>
     <script src="modules/resources/resourceCtrl.js"></script>
      <script src="modules/regions/regionSrvc.js"></script>
     <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
