added method for tableCtrl

--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -16,8 +16,8 @@
 			<td>{{ x.name }}</td>
 			<td>{{ x.name }}</td>
 			<td>
-				<button type="button" class="btn btn-success" ng-click="deletePolygon()">Удалить</button>
-				<button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
+				<button type="button" class="btn btn-success" ng-click="deleteRegion()">Удалить</button>
+				<button type="button" class="btn btn-info" ng-click="editRegion()">Редактировать</button>
 			</td>
 		</tr>
     </tbody>
