--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -11,7 +11,7 @@
       </tr>
     </thead>
     <tbody>
-		<tr ng-repeat="x in names">
+		<tr ng-repeat="x in regions">
 			<td>{{ $index + 1 }}</td>
 			<td>{{ x.name }}</td>
 			<td>{{ x.name }}</td>
