--- a/web/index.html
+++ b/web/index.html
@@ -19,7 +19,7 @@
         <div ng-view class="view-frame"></div>
     </div>
 
-    <!--Скрипты-->
+    <!--пїЅпїЅпїЅпїЅпїЅпїЅпїЅ-->
     <script src="lib/jquery-3.2.1/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="lib/angular-1.6.4/angular.min.js"></script>
     <script type="text/javascript" src="lib/ng-map/ng-map.min.js"></script>
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="modules/header/header.js"></script>
 
     <script type="text/javascript" src="modules/regions/regionCtrl.js"></script>
+    <script type="text/javascript" src="modules/table/tableCtrl.js"></script>
     <script type="text/javascript" src="modules/resources/resourceCtrl.js"></script>
     <script type="text/javascript" src="modules/regions/regionSrvc.js"></script>
     <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
