--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="tableController">
+<div class="container" ng-init = "init()" ng-controller="tableController">
   <h2>Регионы</h2>
   
   <table class="table table-condensed">
