--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -1,24 +1,24 @@
-<div class = "container">
-		<div class = "row">
-		
-			
-			<div map-lazy-load="https://maps.google.com/maps/api/js"
-			  	map-lazy-load-params="{{googleMapsUrl}}">
-			  	<ng-map center="41,-87" zoom="3"></ng-map>
-			</div>
+<div class="container">
+    <div class="row">
 
-			
-			<div class = "col-sm-6">
-				<div class="form-group">
-					<label for="usr">Id:</label>
-					<input type="text" ng-model="id" class="form-control" id="usr"></input>
-				</div>
-				<button type="button" class="btn btn-default" ng-click="openPolygon()">Открыть</button>
-				<button type="button" class="btn btn-primary" ng-click="savePolygon()">Сохранить</button>
-				<button type="button" class="btn btn-success" ng-click="deletePolygon()">Удалить</button>
-				<button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
-				<button type="button" class="btn btn-warning" ng-click="createPolygon()">Создать</button>
-			</div>
-			
-		</div>
-	</div>
+
+        <div map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl}}">
+            <ng-map center="41,-87" zoom="3">
+            </ng-map>
+        </div>
+
+
+        <div class="col-sm-6">
+            <div class="form-group">
+                <label for="usr">Id:</label>
+                <input type="text" ng-model="id" class="form-control" id="usr"></input>
+            </div>
+            <button type="button" class="btn btn-default" ng-click="openPolygon()">Открыть</button>
+            <button type="button" class="btn btn-primary" ng-click="savePolygon()">Сохранить</button>
+            <button type="button" class="btn btn-success" ng-click="deletePolygon()">Удалить</button>
+            <button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
+            <button type="button" class="btn btn-warning" ng-click="createPolygon()">Создать</button>
+        </div>
+
+    </div>
+</div>
