--- a/web/index.html
+++ b/web/index.html
@@ -33,9 +33,12 @@
 
     <script type="text/javascript" src="modules/regions/regionCtrl.js"></script>
     <script type="text/javascript" src="modules/table/tableCtrl.js"></script>
+    <script type="text/javascript" src="modules/table/tableCompanyCtrl.js"></script>
     <script type="text/javascript" src="modules/resources/resourceCtrl.js"></script>
+    <script type="text/javascript" src="modules/company/companyCtrl.js"></script>
     
     <script type="text/javascript" src="modules/regions/regionSrvc.js"></script>
+    <script type="text/javascript" src="modules/company/companySrvc.js"></script>
     <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
 </body>
 
