--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -10,8 +10,10 @@
 
         <div class="col-sm-6">
             <div class="form-group">
-                <label for="usr">Id:</label>
+                <label for="usr">Name:</label>
                 <input type="text" ng-model="id" class="form-control" id="usr"></input>
+				<label for="usr">Code:</label>
+				<input type="text" ng-model="id" class="form-control" id="usr"></input>
             </div>
             <button type="button" class="btn btn-default" ng-click="openPolygon()" ng-if="regionEdit">Открыть</button>
             <button type="button" class="btn btn-primary" ng-click="savePolygon()">Сохранить</button>
