--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -22,5 +22,5 @@
 		</tr>
     </tbody>
   </table>
-  <button type="button" class="btn btn-primary glyphicon glyphicon-pencil" ng-click="addRegion()" title="Добавить новый регион"></button>
+  <button type="button" class="btn btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
 </div>
