--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -20,6 +20,7 @@
             <button type="button" class="btn btn-success" ng-click="deletePolygon()" ng-if="regionEdit">Удалить</button>
             <button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
             <button type="button" class="btn btn-warning" ng-click="createPolygon()" ng-if="regionEdit">Создать</button>
+			<button type="button" class="btn btn-warning" ng-click="backToRegionList()">Список регионов</button>
         </div>
 
     </div>
