--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -20,7 +20,7 @@
 				<button type="button" class="btn btn-primary glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
 
 				<button type="button" class="btn btn-danger glyphicon glyphicon-remove" ng-click="removeRegion(x)" title="Удалить"></button>
-				<button type="button" class="btn btn-danger glyphicon glyphicon-remove" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
+				<button type="button" class="btn btn-danger glyphicon glyphicon-cog" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
 			</td>
 		</tr>
     </tbody>
