--- a/web/modules/table/tableCompany.html
+++ b/web/modules/table/tableCompany.html
@@ -16,11 +16,11 @@
                 <td>{{ x.name }}</td>
                 <td>{{ x.code }}</td>
                 <td>
-                    <button type="button" class="btn btn-primary glyphicon glyphicon-pencil" ng-click="editCompany(x.id)" title="Редактировать"></button>
-                    <button type="button" class="btn btn-danger glyphicon glyphicon-remove" ng-click="deleteCompany(x.id)" title="Удалить"></button>
+                    <button type="button" class="btn btn-sm btn-primary glyphicon glyphicon-pencil" ng-click="editCompany(x.id)" title="Редактировать"></button>
+                    <button type="button" class="btn btn-sm btn-danger glyphicon glyphicon-remove" ng-click="deleteCompany(x.id)" title="Удалить"></button>
                 </td>
             </tr>
         </tbody>
     </table>
-    <button type="button" class="btn btn-primary glyphicon glyphicon-plus" ng-click="addCompany()" title="Добавить новую компанию"></button>
+    <button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addCompany()" title="Добавить новую компанию" ></button>
 </div>
