--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,9 @@
     <script type="text/javascript" src="modules/resources/resourceSrvc.js"></script>
     <script type="text/javascript" src="modules/regions/regionSrvc.js"></script>
     <script type="text/javascript" src="modules/company/companySrvc.js"></script>
+	<script type="text/javascript" src="modules/totalQuota/totalQuotaCtrl.js"></script>
+	<script type="text/javascript" src="modules/totalQuota/totalQuotaSrvc.js"></script>
+	
     <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
 </body>
 
