--- a/web/modules/table/tableCompany.html
+++ b/web/modules/table/tableCompany.html
@@ -23,4 +23,10 @@
         </tbody>
     </table>
     <button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addCompany()" title="Добавить новую компанию" ></button>
+    
+    <div class="row"><!-- beauty -->
+    <div class="col-sm-1" style="height:50px">
+
+    </div>
+  </div>
 </div>
