--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -14,7 +14,6 @@
       <tr ng-repeat="x in regions">
         <td>{{ $index + 1 }}</td>
         <td>{{ x.name }}</td>
-
         <td>{{ x.code }}</td>
         <td>
           <button type="button" class="btn btn-primary btn-sm glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
@@ -26,7 +25,7 @@
     </tbody>
   </table>
   <button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
-  
+  <!-- beauty -->
   <div class="row">
     <div class="col-sm-1" style="height:50px">
 
