--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -21,6 +21,7 @@
             <button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
             <button type="button" class="btn btn-warning" ng-click="createPolygon()" ng-if="regionEdit">Создать</button>
 			<button type="button" class="btn btn-warning" ng-click="backToRegionList()">Список регионов</button>
+			<button type="button" class="btn btn-warning" ng-click="viewResourceTable()">Ресурсы</button>
         </div>
 
     </div>
