Исправления для скринов

--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -17,9 +17,8 @@
         <td>{{ x.code }}</td>
         <td>
           <button type="button" class="btn btn-primary btn-sm glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
-
           <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeRegion(x)" title="Удалить"></button>
-          <button type="button" class="btn btn-warning btn-sm glyphicon glyphicon-cog" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
+          <button type="button" class="btn btn-success btn-sm glyphicon glyphicon-cog" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
         </td>
       </tr>
     </tbody>
