--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="ru">
 
 <head>
     <meta charset="utf-8">
-    <title>Google Phone Gallery</title>
+    <title>Невод</title>
 
     <link rel="stylesheet" type="text/css" href="style/bootstrap-3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="style/bootstrap-3.3.7/css/bootstrap-theme.min.css">
