--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -2,7 +2,7 @@
     <div class="row">
 
 
-        <div map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl}}">
+        <div class = "col-sm-6" map-lazy-load="https://maps.google.com/maps/api/js" map-lazy-load-params="{{googleMapsUrl}}">
             <ng-map center="41,-87" zoom="3">
             </ng-map>
         </div>
@@ -21,8 +21,38 @@
             <button type="button" class="btn btn-info" ng-click="editPolygon()">Редактировать</button>
             <button type="button" class="btn btn-warning" ng-click="createPolygon()" ng-if="regionEdit">Создать</button>
 			<button type="button" class="btn btn-warning" ng-click="backToRegionList()">Список регионов</button>
-			<button type="button" class="btn btn-warning" ng-click="viewResourceTable()">Ресурсы</button>
-        </div>
+			
+			<button type="button" class="btn btn-warning" ng-click="showResourceTable()">Ресурсы</button>
+			
+			<div class = "resource-details" ng-show="showResources">
+			
+				<select ng-model="currentResource" ng-options="resource.name + ' (' + resource.code + ')' group by resource.name for resource in resources">
+				</select>
+				
+				<table class="table table-condensed table-hover">
+					<thead>
+					  <tr>
+						<th>#</th>
+						<th>Название ресурса</th>
+						<th>Код ресурса</th>
+						<th>Действия</th>
+					  </tr>
+					</thead>
+					<tbody>
+					  <tr ng-repeat="x in resourcesInTable track by x.name">
+						<td>{{ $index + 1 }}</td>
+						<td>{{ x.name }}</td>
+						<td>{{ x.code }}</td>
+						<td>
+						  <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeResource($index)" title="Удалить"></button>
+						</td>
+					  </tr>
+					</tbody>
+				</table>
+				<button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addResource()" title="Добавить ресурс"></button>
+			</div>
+			
+		</div>
 
     </div>
 </div>
