--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -1,35 +1,34 @@
 <div class="container" ng-init="init()">
   <h2>Регионы</h2>
+  <div style="display:block; height:500px; overflow:auto">
+    <table class="table table-condensed table-hover">
+      <thead>
+        <tr>
+          <th>#</th>
+          <th>Название региона</th>
+          <th>Код региона</th>
+          <th>Действия</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr ng-repeat="x in regions">
+          <td>{{ $index + 1 }}</td>
+          <td>{{ x.name }}</td>
+          <td>{{ x.code }}</td>
+          <td>
+            <button type="button" class="btn btn-primary btn-sm glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
 
-  <table class="table table-condensed table-hover">
-    <thead>
-      <tr>
-        <th>#</th>
-        <th>Название региона</th>
-        <th>Код региона</th>
-        <th>Действия</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr ng-repeat="x in regions">
-        <td>{{ $index + 1 }}</td>
-        <td>{{ x.name }}</td>
-        <td>{{ x.code }}</td>
-        <td>
-          <button type="button" class="btn btn-primary btn-sm glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
-
-          <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeRegion(x)" title="Удалить"></button>
-          <button type="button" class="btn btn-warning btn-sm glyphicon glyphicon-cog" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-  <button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
-  <!-- beauty -->
-  <div class="row">
-    <div class="col-sm-1" style="height:50px">
-
-    </div>
+            <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeRegion(x)" title="Удалить"></button>
+            <button type="button" class="btn btn-warning btn-sm glyphicon glyphicon-cog" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
   </div>
+  <div class="col-sm-12" style="height:10px">
+    <!-- beauty -->
+  </div>
+  <button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
+
 
 </div>
