Добавлен сервис регион-ресурс

--- a/web/index.html
+++ b/web/index.html
@@ -41,6 +41,7 @@
     <script type="text/javascript" src="modules/company/companySrvc.js"></script>
 	<script type="text/javascript" src="modules/totalQuota/totalQuotaCtrl.js"></script>
 	<script type="text/javascript" src="modules/totalQuota/totalQuotaSrvc.js"></script>
+	<script type="text/javascript" src="modules/regionResource/regionResourceSrvc.js"></script>
 
 	
     <!-- <script src="modules/resources/resourceSrvc.js"></script> -->
