--- a/web/modules/regions/region.html
+++ b/web/modules/regions/region.html
@@ -47,7 +47,7 @@
 						<td>{{ x.name }}</td>
 						<td>{{ x.code }}</td>
 						<td>
-						  <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeResource($index)" title="Удалить"></button>
+						  <button type="button" class="btn btn-danger  btn-sm glyphicon glyphicon-remove" ng-click="removeResource($index.code)" title="Удалить"></button>
 						</td>
 					  </tr>
 					</tbody>
