--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -1,6 +1,7 @@
 <div class="container" ng-init = "init()">
-  <h2>Регионы</h2>
-  
+  <div style="display:table-cell; height:80px; vertical-align:middle;"><span style="font-size: 28px;font-weight: 700;">Регионы</font>
+<button type="button" class="btn btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></div>
+    </p>
   <table class="table table-condensed table-hover">
     <thead>
       <tr>
