--- a/web/modules/table/table.html
+++ b/web/modules/table/table.html
@@ -1,7 +1,10 @@
 <div class="container" ng-init = "init()">
-  <div style="display:table-cell; height:80px; vertical-align:middle;"><span style="font-size: 28px;font-weight: 700;">Регионы</font>
-<button type="button" class="btn btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></div>
-    </p>
+    <div style="display:table-cell; height:80px; vertical-align:middle;">
+      <span style="font-size: 28px;font-weight: 700;">Регионы</font>
+        <button type="button" class="btn btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
+        <button type="button" class="btn btn-info glyphicon glyphicon-globe" ng-click="openRegionsMap()" title="Картографическое отображение"></button>
+    </div>
+        
   <table class="table table-condensed table-hover">
     <thead>
       <tr>
