--- a/web/modules/totalQuota/totalQuota.html
+++ b/web/modules/totalQuota/totalQuota.html
@@ -33,167 +33,41 @@
 	</table>
 	<button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
 </div> -->
-<div class="container">
-  <div class="row">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h4>
-            Fixed Header Scrolling Table 
-          </h4>
-        </div>
-        <table class="table table-fixed">
-          <thead>
-            <tr>
-              <th class="col-xs-2">#</th><th class="col-xs-8">Name</th><th class="col-xs-2">Points</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td class="col-xs-2">1</td><td class="col-xs-8">Mike Adams</td><td class="col-xs-2">23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">2</td><td class="col-xs-8">Holly Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">3</td><td class="col-xs-8">Mary Shea</td><td class="col-xs-2">86</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">4</td><td class="col-xs-8">Jim Adams</td><td>23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">5</td><td class="col-xs-8">Henry Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">6</td><td class="col-xs-8">Bob Shea</td><td class="col-xs-2">26</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">7</td><td class="col-xs-8">Andy Parks</td><td class="col-xs-2">56</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">8</td><td class="col-xs-8">Bob Skelly</td><td class="col-xs-2">96</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">9</td><td class="col-xs-8">William Defoe</td><td class="col-xs-2">13</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">10</td><td class="col-xs-8">Will Tripp</td><td class="col-xs-2">16</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">11</td><td class="col-xs-8">Bill Champion</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">12</td><td class="col-xs-8">Lastly Jane</td><td class="col-xs-2">6</td>
-						</tr>
-						<tr>
-              <td class="col-xs-2">1</td><td class="col-xs-8">Mike Adams</td><td class="col-xs-2">23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">2</td><td class="col-xs-8">Holly Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">3</td><td class="col-xs-8">Mary Shea</td><td class="col-xs-2">86</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">4</td><td class="col-xs-8">Jim Adams</td><td>23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">5</td><td class="col-xs-8">Henry Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">6</td><td class="col-xs-8">Bob Shea</td><td class="col-xs-2">26</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">7</td><td class="col-xs-8">Andy Parks</td><td class="col-xs-2">56</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">8</td><td class="col-xs-8">Bob Skelly</td><td class="col-xs-2">96</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">9</td><td class="col-xs-8">William Defoe</td><td class="col-xs-2">13</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">10</td><td class="col-xs-8">Will Tripp</td><td class="col-xs-2">16</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">11</td><td class="col-xs-8">Bill Champion</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">12</td><td class="col-xs-8">Lastly Jane</td><td class="col-xs-2">6</td>
-						</tr>
-						<tr>
-              <td class="col-xs-2">1</td><td class="col-xs-8">Mike Adams</td><td class="col-xs-2">23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">2</td><td class="col-xs-8">Holly Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">3</td><td class="col-xs-8">Mary Shea</td><td class="col-xs-2">86</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">4</td><td class="col-xs-8">Jim Adams</td><td>23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">5</td><td class="col-xs-8">Henry Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">6</td><td class="col-xs-8">Bob Shea</td><td class="col-xs-2">26</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">7</td><td class="col-xs-8">Andy Parks</td><td class="col-xs-2">56</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">8</td><td class="col-xs-8">Bob Skelly</td><td class="col-xs-2">96</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">9</td><td class="col-xs-8">William Defoe</td><td class="col-xs-2">13</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">10</td><td class="col-xs-8">Will Tripp</td><td class="col-xs-2">16</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">11</td><td class="col-xs-8">Bill Champion</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">12</td><td class="col-xs-8">Lastly Jane</td><td class="col-xs-2">6</td>
-						</tr>
-						<tr>
-              <td class="col-xs-2">1</td><td class="col-xs-8">Mike Adams</td><td class="col-xs-2">23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">2</td><td class="col-xs-8">Holly Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">3</td><td class="col-xs-8">Mary Shea</td><td class="col-xs-2">86</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">4</td><td class="col-xs-8">Jim Adams</td><td>23</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">5</td><td class="col-xs-8">Henry Galivan</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">6</td><td class="col-xs-8">Bob Shea</td><td class="col-xs-2">26</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">7</td><td class="col-xs-8">Andy Parks</td><td class="col-xs-2">56</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">8</td><td class="col-xs-8">Bob Skelly</td><td class="col-xs-2">96</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">9</td><td class="col-xs-8">William Defoe</td><td class="col-xs-2">13</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">10</td><td class="col-xs-8">Will Tripp</td><td class="col-xs-2">16</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">11</td><td class="col-xs-8">Bill Champion</td><td class="col-xs-2">44</td>
-            </tr>
-            <tr>
-              <td class="col-xs-2">12</td><td class="col-xs-8">Lastly Jane</td><td class="col-xs-2">6</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+<div class="container" ng-init="init()">
+   <div class="row" ng-show="hidder">
+    <table class="table table-fixed table-condensed table-hover">
+      <thead>
+        <tr>
+          <th class="col-xs-1">#</th>
+          <th class="col-xs-2">Ресурс</th>
+          <th class="col-xs-2">Лимит</th>
+          <th class="col-xs-2">Дата с</th>
+          <th class="col-xs-3">Дата по</th>
+          <th class="col-xs-2">Действия</th>
+
+        </tr>
+      </thead>
+      <tbody style="height: 500px">
+        <tr ng-repeat="x in regions" class="col-xs-12">
+
+          <td class="col-xs-1">{{ $index + 1 }}</td>
+          <td class="col-xs-2">{{ x.name }}</td>
+          <td class="col-xs-2">{{ x.name }}</td>
+          <td class="col-xs-2">{{ x.name }}</td>
+          <td class="col-xs-3">{{ x.name }}</td>
+          <td class="col-xs-2">
+            <button type="button" class="btn btn-xs btn-primary" ng-click="hide()" title="Редактировать">Редактировать</button>
+          </td>
+
+        </tr>
+      </tbody>
+    </table>
+    <button type="button" class="btn btn-lg btn-primary" ng-click="editRegion(x.id)" title="Создать">Создать</button>
+  </div>
+  <div class="row" ng-hide="hidder">
+    <h1>Прив
+      <button type="button" class="btn btn-lg btn-primary" ng-click="hide()" title="Редактировать">Пок</button>
+  </div> 
+    
   </div>
 </div>
