--- a/web/modules/totalQuota/totalQuota.html
+++ b/web/modules/totalQuota/totalQuota.html
@@ -1,39 +1,7 @@
-<!-- <div class="container" ng-init="init()">
-	<label for="table"><h2>Ресурсы:</h2></label>
-
-	<table id="table" class="table-fixed table table-condensed table-hover ">
-
-		<thead>
-			<tr>
-				<th class="">#</th>
-				<th>Ресурс</th>
-				<th>Лимит</th>
-				<th>Дата с</th>
-				<th>Дата по</th>
-				<th>Действия</th>
-			</tr>
-
-		</thead>
-
-		<tbody>
-
-			<tr ng-repeat="x in regions">
-				<td>{{ $index + 1 }}</td>
-				<td>{{ x.name }}</td>
-				<td>{{ x.name }}</td>
-				<td>{{ x.name }}</td>
-				<td>{{ x.name }}</td>
-				<td>
-					<button type="button" class="btn btn-sm btn-primary glyphicon glyphicon-pencil" ng-click="editRegion(x.id)" title="Редактировать"></button>
-					<button type="button" class="btn btn-sm btn-danger glyphicon glyphicon-remove" ng-click="removeRegion(x)" title="Удалить"></button>
-					<button type="button" class="btn btn-sm btn-danger glyphicon glyphicon-remove" ng-click="deleteRegion(x.id)" title="Редактировать лимиты"></button>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-	<button type="button" class="btn btn-lg btn-primary glyphicon glyphicon-plus" ng-click="addRegion()" title="Добавить новый регион"></button>
-</div> -->
 <div class="container" ng-init="init()">
+    <div>
+      <p class="col-xs-12"><h1>{{ currentRegion.name }}</h1></p>
+    </div>
    <div class="row" ng-show="hidder">
     <table class="table table-fixed table-condensed table-hover">
       <thead>
@@ -47,14 +15,14 @@
 
         </tr>
       </thead>
-      <tbody style="height: 500px">
-        <tr ng-repeat="x in regions" class="col-xs-12">
+      <tbody style="height: 400px">
+        <tr ng-repeat="x in resources" class="col-xs-12">
 
           <td class="col-xs-1">{{ $index + 1 }}</td>
-          <td class="col-xs-2">{{ x.name }}</td>
-          <td class="col-xs-2">{{ x.name }}</td>
-          <td class="col-xs-2">{{ x.name }}</td>
-          <td class="col-xs-3">{{ x.name }}</td>
+          <td class="col-xs-2">{{ x[0] }}</td>
+          <td class="col-xs-2">{{ x[1] }}</td>
+          <td class="col-xs-2">{{ x[2] }}</td>
+          <td class="col-xs-3">{{ x[3] }}</td>
           <td class="col-xs-2">
             <button type="button" class="btn btn-xs btn-primary" ng-click="hide()" title="Редактировать">Редактировать</button>
           </td>
